--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,31 +1,39 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
   <div class="container">
-    <a class="navbar-brand" href="#">Dotnet App</a>
-    <ul
-      class="navbar-nav me-auto mb-2 mb-md-0"
-      *ngIf="accountService.currentUser$ | async"
+    <a class="navbar-brand" routerLink="/" routerLinkActive="active"
+      >Dotnet App</a
     >
-      <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">Matches</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Lists</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" aria-disabled="true">Messages</a>
-      </li>
+    <ul class="navbar-nav me-auto mb-2 mb-md-0">
+      <ng-container *ngIf="accountService.currentUser$ | async">
+        <!-- Similar to Fragment in Reactjs or <></>-->
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/members" routerLinkActive="active"
+            >Matches</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/lists" routerLinkActive="active"
+            >Lists</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/messages" routerLinkActive="active"
+            >Messages</a
+          >
+        </li>
+      </ng-container>
     </ul>
 
     <div
       class="dropdown"
-      *ngIf="accountService.currentUser$ | async"
+      *ngIf="accountService.currentUser$ | async as user"
       ngbDropdown
     >
       <!---This automatically subscribe/unsubscribe an observable (by using the | pipe sign)-->
       <a
         class="dropdown-toggle text-light text-decoration-none"
         ngbDropdownToggle
-        >Welcome User</a
+        >Welcome {{ user.username | titlecase }}</a
       >
       <div class="dropdown-menu" ngbDropdownMenu>
         <a class="dropdown-item">Edit Profile</a>
@@ -55,7 +63,7 @@
         type="password"
         placeholder="Password"
       />
-      <button class="btn btn-outline-success" type="submit">Login</button>
+      <button class="btn btn-success" type="submit">Login</button>
     </form>
   </div>
 </nav>
